--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,7 +7,7 @@
   :root {
     --grå: #0808088a;
     --rød: #730202;
-    --lys: #F2EEB3;
+    --lys: #f2eeb3ce;
     --mørkgrøn: #222601;
     --lysgrøn: #384002;
     --hvid: #ffff;
@@ -547,6 +547,20 @@
  background-color:var(--rød);
   }
 
+.tivoli-banner {
+  background-color: green;
+  height: 200vh;
+  width: 10%;
+}
+
+.left-side {
+  float: left;
+}
+
+.right-side {
+  float: right;
+}
+
 .tivoli-title {
   color: white;
   background-color: rgba(0, 0, 0, 0.397);
@@ -575,7 +589,7 @@
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
-  background-color: #f2eeb3a6;
+  background-color: #f2eeb398;
   padding: 1rem;
   margin-bottom: 2rem;
   font-size: 0.9rem;
@@ -600,6 +614,10 @@
   }
   .tivoli-title {
     font-size: 8vw;
+  }
+
+  .tivoli-banner {
+    display: none;
   }
  }
 
