--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,28 +1,270 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   
-  :root {
-    --grå: #0808088a;
-    --rød: #730202;
-    --lys: #F2EEB3;
-    --mørkgrøn: #222601;
-    --lysgrøn: #384002;
-    --hvid: #ffff;
-    --sort: #000000;
-  }
+}
+
+:root {
+  --grå: #0808088a;
+  --rød: #730202;
+  --lys: #f2eeb3ce;
+  --mørkgrøn: #222601;
+  --lysgrøn: #384002;
+  --hvid: #ffff;
+  --sort: #000000;
+}
+
+
+html {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 22px;
+  letter-spacing: 0.2rem;
+}
+
+img {
+  max-width: 100%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* nav start */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* nav slut */
+/* forside start */
+
+.forside-container {
+  display: grid;
+  grid-template-columns: 15% auto 15%;
+  grid-template-rows: auto auto 2fr;
+  gap: none;
   
-  html {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 22px;
-  }
   
-  img {
-    max-width: 100%;
+}
+
+.forside-top {
+  background-image: url("C:/Users/rikke/OneDrive/Dokumenter/NY-Microsite-i-Aalborg/assets/img/Forside-top1.jpg");
+  width: 100%;
+  height: 50vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  grid-column: 1 / 4;
+  grid-row: 1 / 2;
+  
+  
+}
+
+.forside-top h1 {
+  font-size: 1.5rem;
+  font-family: amiri;
+color: var(--hvid);
+background-color: var(--grå);
+text-align: center;
+padding: 0.2rem 2rem 0.2rem;
+letter-spacing: 0.3rem;
+}
+
+.forsidebanner-højre {
+  background-color: var(--rød);
+  background-image: url("C:/Users/rikke/OneDrive/Dokumenter/NY-Microsite-i-Aalborg/assets/img/Julebanner.jpg");
+  grid-column: 1 / 2;
+  grid-row: 2 / 5;
+}
+
+.forside-info {
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+  background-color: var(--rød);
+  padding: 0.5rem 1rem 0.5rem;
+  color: var(--hvid);
+}
+
+.forside-article {
+  
+  grid-column: 2 / 3;
+  grid-row: 3 / 4;
+  padding: 0.5rem 1rem 0.5rem;
+  background-color: var(--rød);
+}
+
+.forsidebanner-venstre {
+  background-color: var(--rød);
+  background-image: url("C:/Users/rikke/OneDrive/Dokumenter/NY-Microsite-i-Aalborg/assets/img/Julebanner.jpg");
+  grid-column: 3 / 4;
+  grid-row: 2 / 5;
+}
+
+.forside-article article {
+  display: grid;
+  grid-template-columns:  1fr 2.5fr 0.5fr ;
+  grid-template-rows: 0.3fr 1.6 fr 0.5fr;
+  background-color: var(--lys);
+  padding: 0.5rem;
+  margin-top: 0.5rem;
+}
+.forside-article img {
+width: 10rem;
+width: 10rem;
+grid-column: 1 / 2;
+grid-row: 1 / 4;
+}
+
+.forside-article h2 {
+grid-row: 1 / 2;
+grid-column: 2 / 4;
+font-family: amiri;
+letter-spacing: 0.3rem;
+font-size: 1.3rem;
+}
+
+.forside-article p {
+grid-row: 2 / 3;
+grid-column: 2 / 4;
+font-size: 0.8rem;
+}
+
+.forside-article article a {
+background-color: var(--mørkgrøn);
+color: var(--hvid);
+grid-column: 3 / 4;
+grid-row: 3 / 4;
+text-decoration: none;
+text-align: center;
+width: 5rem;
+height: 1.5rem;
+}
+
+@media screen and (max-width: 1023px) {
+  .forside-container{
+    grid-template-rows: auto auto 1fr 1fr;
+    grid-template-columns: auto;
+  }
+  .forside-banner {
+    display: none;
+  }
+ }
+
+@media screen and (max-width: 767px) {
+  .forside-container {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto 1fr; 
+  }
+  .tivoli-title {
+    font-size: 8vw;
   }
 
+  .forside-banner {
+    display: none;
+  }
+ }
 
 
 
@@ -40,7 +282,6 @@
 
 
 
-  /*nav start*/
 
 
 
@@ -139,8 +380,6 @@
 
 
 
-  /*nav slut*/
-  /*forside start*/
 
 
 
@@ -200,6 +439,8 @@
 
 
 
+/* forside slut */
+/* boder start */
 
 
 
@@ -339,8 +580,6 @@
 
 
 
-  /*forside slut*/
-  /*boder start*/
 
 
 
@@ -401,6 +640,8 @@
 
 
 
+/* boder slut */
+ /* tivoli start */
 
 
 
@@ -498,6 +739,8 @@
 
 
 
+/* tivoli slut */
+ /* juletræstænding med julemanden start */
 
 
 
@@ -541,8 +784,6 @@
 
 
 
-  /*boder slut*/
-   /*tivoli start*/
 
 
 
@@ -597,6 +838,8 @@
 
 
 
+/* juletræstænding med julemanden slut */
+ /* julelystænding start */
 
 
 
@@ -641,8 +884,6 @@
 
 
 
-  /*tivoli slut*/
-   /*juletræstænding med julemanden start*/
 
 
 
@@ -696,6 +937,8 @@
 
 
 
+/* julelystænding slut */
+ /* historie start */
 
 
 
@@ -741,8 +984,6 @@
 
 
 
-  /*juletræstænding med julemanden slut*/
-   /*julelystænding start*/
 
 
 
@@ -795,6 +1036,8 @@
 
 
 
+/* historie slut */
+ /* det sker også i aalborg start */
 
 
 
@@ -841,8 +1084,6 @@
 
 
 
-  /*julelystænding slut*/
-   /*historie start*/
 
 
 
@@ -894,151 +1135,6 @@
 
 
 
+/* det sker også i aalborg slut */
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  /*historie slut*/
-   /*det sker også i aalborg start*/
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  /*det sker også i aalborg slut*/
