--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,19 +1,22 @@
 * {
-
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  
 }
 
 :root {
   --grå: #0808088a;
   --rød: #730202;
-  --lys: #f2eeb3ce;
+  --lys: #F2EEB3;
   --mørkgrøn: #222601;
   --lysgrøn: #384002;
   --hvid: #ffff;
   --sort: #000000;
+}
+
+html {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 22px;
 }
 
 img {
@@ -36,8 +39,8 @@ img {
 
 
 
-/* nav start */
 
+/*nav start*/
 
 
 
@@ -101,7 +104,6 @@ img {
 
 
 
-  
 
 
 
@@ -114,126 +116,30 @@ img {
 
 
 
-  /* nav slut */
-  /* forside start */
 
-  .forside-container {
-    display: grid;
-    grid-template-columns: 15% auto 15%;
-    grid-template-rows: 27% auto 2fr;
-    gap: none;
-    
-    
-  }
 
-  .forside-top {
-    background-image: url("C:/Users/rikke/OneDrive/Dokumenter/NY-Microsite-i-Aalborg/assets/img/Forside-top1.jpg");
-    width: 100%;
-    height: 50vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    grid-column: 1 / 4;
-    grid-row: 1 / 2;
-    
-    
-  }
-
-  .forside-top h1 {
-    font-size: 1.5rem;
-    font-family: amiri;
-  color: var(--hvid);
-  background-color: var(--grå);
-  text-align: center;
-  padding: 0.2rem 2rem 0.2rem;
-  letter-spacing: 0.3rem;
-  }
-
-  .forsidebanner-højre {
-    background-color: var(--rød);
-    background-image: url("C:/Users/rikke/OneDrive/Dokumenter/NY-Microsite-i-Aalborg/assets/img/Julebanner.jpg");
-    grid-column: 1 / 2;
-    grid-row: 2 / 5;
-  }
-
-  .forside-info {
-    grid-column: 2 / 3;
-    grid-row: 2 / 3;
-    background-color: var(--rød);
-    padding: 0.5rem 1rem 0.5rem;
-    color: var(--hvid);
-  }
-
-  .forside-article {
-    
-    grid-column: 2 / 3;
-    grid-row: 3 / 4;
-    padding: 0.5rem 1rem 0.5rem;
-    background-color: var(--rød);
-  }
-
-  .forsidebanner-venstre {
-    background-color: var(--rød);
-    background-image: url("C:/Users/rikke/OneDrive/Dokumenter/NY-Microsite-i-Aalborg/assets/img/Julebanner.jpg");
-    grid-column: 3 / 4;
-    grid-row: 2 / 5;
-  }
-
-  .forside-article article {
-    display: grid;
-    grid-template-columns:  1fr 2.5fr 0.5fr ;
-    grid-template-rows: 0.3fr 1.6 fr 0.5fr;
-    background-color: var(--lys);
-    padding: 0.5rem;
-    margin-top: 0.5rem;
-  }
-.forside-article img {
-  width: 10rem;
-  width: 10rem;
-  grid-column: 1 / 2;
-  grid-row: 1 / 4;
-}
-
-.forside-article h2 {
-  grid-row: 1 / 2;
-  grid-column: 2 / 4;
-  font-family: amiri;
-  letter-spacing: 0.3rem;
-  font-size: 1.3rem;
-}
-
-.forside-article p {
-  grid-row: 2 / 3;
-  grid-column: 2 / 4;
-  font-size: 0.8rem;
-}
-
-.forside-article article a {
-  background-color: var(--mørkgrøn);
-  color: var(--hvid);
-  grid-column: 3 / 4;
-  grid-row: 3 / 4;
-  text-decoration: none;
-  text-align: center;
-  width: 5rem;
-  height: 1.5rem;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* nav slut */
-/* forside start */
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*nav slut*/
 .forside-container {
   display: grid;
   grid-template-columns: 15% auto 15%;
@@ -426,9 +332,12 @@ height: 1.5rem;
 
 
 
+ 
 
 
 
+/*forside slut*/
+/*boder start*/
 
 
 
@@ -531,8 +440,6 @@ height: 1.5rem;
 
 
 
-/* forside slut */
-/* boder start */
 
 
 
@@ -631,6 +538,8 @@ height: 1.5rem;
 
 
 
+/*boder slut*/
+ /*tivoli start*/
 
 
 
@@ -729,8 +638,8 @@ height: 1.5rem;
 
 
 
-/* boder slut */
- /* tivoli start */
+/*tivoli slut*/
+ /*juletræstænding med julemanden start*/
 
 
 
@@ -826,11 +735,11 @@ height: 1.5rem;
 
 
 
-/* tivoli slut */
- /* juletræstænding med julemanden start */
 
 
 
+/*juletræstænding med julemanden slut*/
+ /*julelystænding start*/
 
 
 
@@ -922,8 +831,6 @@ height: 1.5rem;
 
 
 
-/* juletræstænding med julemanden slut */
- /* julelystænding start */
 
 
 
@@ -931,6 +838,8 @@ height: 1.5rem;
 
 
 
+/*julelystænding slut*/
+ /*historie start*/
 
 
 
@@ -1020,8 +929,6 @@ height: 1.5rem;
 
 
 
-  /* julelystænding slut */
-   /* historie start */
 
 
 
@@ -1031,6 +938,8 @@ height: 1.5rem;
 
 
 
+/*historie slut*/
+ /*det sker også i aalborg start*/
 
 
 
@@ -1119,8 +1028,6 @@ height: 1.5rem;
 
 
 
-/* historie slut */
- /* det sker også i aalborg start */
 
 
 
@@ -1131,91 +1038,4 @@ height: 1.5rem;
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* det sker også i aalborg slut */
-
+/*det sker også i aalborg slut*/
