--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1049,6 +1049,33 @@ height: 1.5rem;
   .aalborg-banner {
     display: none;
   }
+
+  .aalborg-article{
+    display: grid;
+    grid-column: 200px;
+    grid-row: auto auto auto auto;
+    
+    
+  }
+
+  .aalborg-article img {
+    grid-row: 1 / 2;
+    grid-column: 1 / 2;
+    
+  }
+
+  .aalborg-article h2 {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+    width: 75vw;
+  }
+  .aalborg-article p {
+    display: none;
+  }
+  .aalborg-article a {
+    grid-column: 1 / 2;
+    grid-row: 4 / 5;
+  }
  }
 
 @media screen and (max-width: 767px) {
