--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -699,6 +699,20 @@ letter-spacing: 0.5rem;
   font-size: 0;
 }
 
+.juletraestaending-banner {
+  background-color: green;
+  height: 160vh;
+  width: 12%;
+}
+
+.juletraestaending-banner-left-side {
+  float: left;
+}
+
+.juletraestaending-banner-left-side {
+  float: right;
+}
+
 @media screen and (max-width: 767px) {
   .juletraestaending-program-grid-container {
     display: grid;
