--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,7 +7,7 @@
   :root {
     --grå: #0808088a;
     --rød: #730202;
-    --lys: #F2EEB3;
+    --lys: #f2eeb3ce;
     --mørkgrøn: #222601;
     --lysgrøn: #384002;
     --hvid: #ffff;
@@ -17,6 +17,7 @@
   html {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 22px;
+    letter-spacing: 0.2rem;
   }
   
   img {
@@ -342,18 +343,154 @@
   /*forside slut*/
   /*boder start*/
 
+  body{
+    background-color: var(--rød);
+  }
 
+.boder-grid-container-main{
+  justify-content: space-evenly;
+display:grid;
+grid-template-columns:16.5rem 16.5rem 16.5rem;
+grid-template-rows: 32rem 32rem 32rem 32rem 32rem 32rem 32rem;
+grid-area: maingrid;
+grid-template-areas:
+'enkeltbod enkeltbod enkeltbod'
 
+'enkeltbod enkeltbod enkeltbod'
 
+'enkeltbod enkeltbod enkeltbod'
 
+'enkeltbod enkeltbod enkeltbod'
 
+'enkeltbod enkeltbod enkeltbod'
 
+'enkeltbod enkeltbod enkeltbod'
 
+'spacingbod enkeltbod spacingbod'
 
+'spacingbod kortid spacingbod';
+}
 
+.spacingbod{
+  grid-area: spacingbod;
+  width:16.5rem;
+  height: 28rem;
 
+}
 
+#kortid{
+  height: auto;
+  width:1300px;
+  border-color:#964242;
+  border-width: 5px;
+  border-style: solid;
+  margin-bottom:3rem;
+  margin-top:200rem;
+  margin-left:16%;
+  align-content: center;
+}
 
+.flex-wrapper{
+  justify-content:space-between;
+  display:flex;
+  flex-wrap:wrap;
+}
+
+.enkeltbod-full{
+  width:16.5rem;
+  height: 28rem;
+}
+
+.enkeltbod{
+background-color:#C49973 ;
+padding-bottom: 0.5rem;
+height:28rem;
+}
+
+.underbod{
+  width:16.5rem;
+  height: 2rem;
+  background-color: #C49973;
+}
+
+.bodknap{
+  width:6rem;
+  background-color: var(--lysgrøn);
+  display: inline-block;
+  align-items: center;
+  text-align: center;
+  border-width: 1px;
+  border-color:var(--mørkgrøn);
+  border-style:solid;
+  color:#D6D299;
+  text-decoration: none;
+  position:relative;
+  margin-left:5rem;
+}
+
+.boder-grid-container-wrapper{
+  display: grid;
+grid-template-columns: 220px auto 220px;
+grid-template-rows: 14rem auto;
+max-height: 100vh;
+grid-template-areas:
+'bannerven udvalg bannerhøj'
+'bannerven maingrid bannerhøj'
+'kortid kortid kortid'
+}
+
+.sidevenstre{
+  width: 10rem;
+  max-height:6378px;
+  grid-area: bannerven;
+
+}
+
+.sidehøjre{
+  width: 10rem;
+  max-height: 6378px;
+  grid-area: bannerhøj;
+  }
+
+.udvalg{
+  margin-top: 2rem;
+  margin-bottom: 3rem;
+  grid-area:udvalg;
+  
+}
+
+.udvalgbox{
+  font-family: ;
+  color:white;
+  text-align: center;
+  background-color: #5D0202;
+  margin-left: 3rem;
+  margin-right: 3rem;
+  padding: 1rem;
+  width:60rem;
+}
+
+.usynlig1{
+  width:100%;
+  height: 1.4rem;
+}
+
+.bodp{
+  font-size: 10px;
+  padding-left:10px;
+  padding-right: 10px;
+  margin-bottom: 15px;
+}
+
+.bodtitel{
+  margin-left:1.4rem;
+  width:300px;
+  height:60px;
+  background-color: #957558;
+  color:rgb(0, 0, 0);
+  text-align:center;
+  align-content: stretch;
+}
 
 
 
