--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -140,6 +140,26 @@ img {
 
 
 /*nav slut*/
+.corona{
+  width: 100%;
+  height: 35px;
+  background-color:#ffd36c ;
+  border-style: solid;
+  border-width: 5px;
+  border-color: #FAB20B ;
+  font-size: 0.6rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+}
+
+.corona p {
+ 
+}
+
+
+
 .forside-container {
   display: grid;
   grid-template-columns: 15% auto 15%;
